# CMakeProjectStructure

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Readme.md
Cmps.Business/include/Cmps.Business/: Person.h
Cmps.Business/include/Cmps.Business/Repositories/: IPersonRepository.h
Cmps.Data/: CMakeLists.txt
Cmps.Presentation.Console/: CMakeLists.txt
src/Cmps.Business/: CMakeLists.txt
src/Cmps.Business/include/Cmps.Business/: Person.h  Preprocessor.h
src/Cmps.Business/include/Cmps.Business/Repositories/: IPersonRepository.h
src/Cmps.Business/src/Cmps.Business/: Person.cpp
src/Cmps.Console/: CMakeLists.txt
src/Cmps.Console/src/Cmps.Console/: Program.cpp
src/Cmps.Data/: CMakeLists.txt
src/Cmps.Data/include/Cmps.Data/: Preprocessor.h
src/Cmps.Data/include/Cmps.Data/Repositories/: PersonRepository.h
src/Cmps.Data/src/Cmps.Data/Repositories/: PersonRepository.cpp
src/Cmps.Presentation.Console/src/Cmps.Presentation.Console/: Program.cpp
